# bgzf_rust_reader

./: Cargo.toml  README.md  bgzf_test  bgzf_test.bgz
src/: lib.rs
tests/: integration_test.rs
