[package]
name = "bgzf_rust_reader"
version = "0.2.1"
authors = ["swoven pokharel <swovenpokharel@gmail.com>"]
edition = "2018"
description = "This library reads and provides Random Access to BGZF(Bgzip) formatted file."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/swoven123/bgzf_rust_reader"
repository = "https://github.com/swoven123/bgzf_rust_reader"
documentation = "https://docs.rs/bgzf_rust_reader"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
positioned-io = "0.2.2"
libdeflater = "0.7.3"
